--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,14 +21,14 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_below="@id/img_background"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="-100dp"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
             android:src="@drawable/bob"
-            app:civ_border_width="2dp"
-            app:civ_border_color="@color/white"/>
+            app:civ_border_color="@color/white"
+            app:civ_border_width="2dp" />
 
         <TextView
             android:id="@+id/tvUsername"
@@ -99,11 +99,11 @@
                     android:id="@+id/switchMeetUp"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="0dp"
                     android:padding="0dp"
                     android:thumb="@drawable/thumb"
-                    app:track="@drawable/track"
-                    android:layout_marginBottom="0dp"
-                    android:layout_centerHorizontal="true" />
+                    app:track="@drawable/track" />
 
                 <TextView
                     style="@style/modifiedLightTextView"
@@ -117,12 +117,12 @@
         <include
             android:id="@+id/layoutProfile"
             layout="@layout/layout_profile"
-            android:layout_below="@id/linearLayout"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayout"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp" />
 
         <include
             layout="@layout/custom_tab_layout"
