--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,7 @@
         <item name="drawableStartCompat">@drawable/ic_smiley</item>
         <item name="android:drawablePadding">20dp</item>
         <item name="android:background">@null</item>
+        <item name = "android:textColorHint">@color/white</item>
     </style>
 
     <style name="modifiedNumberView" parent="parent">
