--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -52,6 +52,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvHello2" />
 
+        <!--
         <LinearLayout
             android:id="@+id/filter"
             android:layout_width="match_parent"
@@ -82,6 +83,7 @@
                 />
 
         </LinearLayout>
+        -->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvRecipe"
@@ -90,7 +92,7 @@
             android:layout_marginTop="20dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/filter"
+            app:layout_constraintTop_toBottomOf="@+id/searchView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_behavior="android.support.v4.widget.NestedScrollView"/>
 
