--- a/app/src/main/res/drawable/ic_edit_pencil.xml
+++ b/app/src/main/res/drawable/ic_edit_pencil.xml
@@ -1,11 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#333333"
-    android:alpha="0.6">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M3,17.25V21h3.75L17.81,9.94l-3.75,-3.75L3,17.25zM20.71,7.04c0.39,-0.39 0.39,-1.02 0,-1.41l-2.34,-2.34c-0.39,-0.39 -1.02,-0.39 -1.41,0l-1.83,1.83 3.75,3.75 1.83,-1.83z"/>
+<vector android:height="24dp" android:viewportHeight="59.985"
+    android:viewportWidth="59.985" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@color/white" android:pathData="M59.985,7c0,-1.87 -0.728,-3.627 -2.05,-4.949S54.855,0 52.985,0s-3.627,0.729 -4.95,2.051l-1.414,1.414l-4.243,4.242l0,0L4.536,45.551c-0.11,0.109 -0.192,0.243 -0.242,0.391L0.051,58.669c-0.12,0.359 -0.026,0.756 0.242,1.023c0.19,0.19 0.446,0.293 0.707,0.293c0.106,0 0.212,-0.017 0.316,-0.052l12.728,-4.243c0.147,-0.049 0.281,-0.132 0.391,-0.241l37.843,-37.843l0,0l4.242,-4.242l0,0l1.415,-1.415C59.257,10.627 59.985,8.87 59.985,7zM52.278,14.778l-7.071,-7.071l1.414,-1.414l7.071,7.071L52.278,14.778zM5.68,48.109l6.197,6.196l-9.296,3.099L5.68,48.109zM13.728,53.328l-7.071,-7.07L43.793,9.121l7.071,7.071L13.728,53.328zM55.106,11.95l-7.071,-7.071l1.414,-1.414C50.394,2.521 51.65,2 52.985,2s2.591,0.521 3.536,1.465s1.464,2.2 1.464,3.535s-0.52,2.591 -1.464,3.535L55.106,11.95z"/>
 </vector>
