--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,6 +44,17 @@
             android:textFontWeight="600"
             android:textSize="35sp" />
 
+        <ImageButton
+            android:id="@+id/btnMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_menu"
+            android:backgroundTint = "@color/black"
+            android:background="@null"
+            android:padding="10dp"
+            android:layout_alignParentRight="true"
+            android:clickable="true"/>
+
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
@@ -53,6 +64,7 @@
             android:orientation="horizontal"
             android:gravity="center">
 
+            <!--
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,25 +83,27 @@
                     android:text="Followers"
                     android:layout_below="@id/tvFollowers" />
             </RelativeLayout>
+            -->
 
-            <RelativeLayout
+            <ImageButton
+                android:id="@+id/btnLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="50dp">
-                <TextView
-                    android:id="@+id/tvFollowing"
-                    style="@style/modifiedTextView"
-                    android:text="1.2k"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:layout_marginBottom="0dp"
-                    android:layout_centerHorizontal="true" />
+                android:src="@drawable/ic_location"
+                android:backgroundTint = "@color/black"
+                android:background="@null"
+                android:layout_marginEnd="50dp"
+                android:padding="10dp"/>
 
-                <TextView
-                    style="@style/modifiedLightTextView"
-                    android:text="Following"
-                    android:layout_below="@id/tvFollowing" />
-            </RelativeLayout>
+            <ImageButton
+                android:id="@+id/btnChat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_chat"
+                android:backgroundTint = "@color/black"
+                android:background="@null"
+                android:layout_marginEnd="50dp"
+                android:padding="10dp"/>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -99,11 +113,11 @@
                     android:id="@+id/switchMeetUp"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="0dp"
                     android:padding="0dp"
                     android:thumb="@drawable/thumb"
-                    app:track="@drawable/track"
-                    android:layout_marginBottom="0dp"
-                    android:layout_centerHorizontal="true" />
+                    app:track="@drawable/track" />
 
                 <TextView
                     style="@style/modifiedLightTextView"
