--- a/app/src/main/res/layout/layout_recipe.xml
+++ b/app/src/main/res/layout/layout_recipe.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="15dp"
+    app:cardBackgroundColor="@color/cream"
+    app:cardCornerRadius="10dp"
     app:cardElevation="1dp"
     app:cardMaxElevation="1dp"
     app:cardPreventCornerOverlap="true"
