--- a/app/src/main/res/layout/fragment_feeds.xml
+++ b/app/src/main/res/layout/fragment_feeds.xml
@@ -4,15 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FeedsFragment"
+    android:background="@color/black"
+    tools:context=".Feeds.FeedsFragment"
     android:id="@+id/fragment_feeds">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Feeds Fragment"
-        android:textSize="25dp" />
+        android:layout_width="match_parent"
+        style="@style/postTextView"
+        app:title="FitShare"
+        app:titleTextColor="@color/white" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvRecipe"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="80dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_behavior="android.support.v4.widget.NestedScrollView"/>
 
 </FrameLayout>
