--- a/app/src/main/res/layout/layout_profile_menu.xml
+++ b/app/src/main/res/layout/layout_profile_menu.xml
@@ -10,6 +10,38 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!--
+        <LinearLayout
+            android:layout_marginTop="40dp"
+            android:id="@+id/editAvatar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/ic_avatar"
+                android:padding="5dp"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit Profile Avatar"
+                android:textColor="@color/white"
+                android:fontFamily="@font/roboto_light"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:padding="8dp"/>
+        </LinearLayout>
+
+        -->
+
         <LinearLayout
             android:layout_marginTop="40dp"
             android:id="@+id/editProfile"
@@ -39,6 +71,8 @@
                 android:padding="8dp"/>
         </LinearLayout>
 
+
+
         <LinearLayout
             android:id="@+id/logout"
             android:layout_width="match_parent"
@@ -66,5 +100,6 @@
                 android:layout_marginStart="10dp"
                 android:padding="8dp"/>
         </LinearLayout>
+
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
