--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="cadmium_blue">#0a1195</color>
     <color name="mikado_yellow">#ffc40c</color>
     <color name="neon_blue">#1F51FF</color>
+    <color name="red">#FF0000</color>
+    <color name="dark_gray">#3D3D3D</color>
 </resources>
