--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,6 +65,16 @@
         <item name = "android:textColorHint">@color/white</item>
     </style>
 
+    <style name="postTextView" parent="parent">
+        <item name="fontFamily">@font/courgette</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@null</item>
+    </style>
+
     <style name="modifiedNumberView" parent="parent">
         <item name="fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/dark_blue</item>
