--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,14 +21,14 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_below="@id/img_background"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="-100dp"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
             android:src="@drawable/bob"
-            app:civ_border_width="2dp"
-            app:civ_border_color="@color/white"/>
+            app:civ_border_color="@color/white"
+            app:civ_border_width="2dp" />
 
         <TextView
             android:id="@+id/tvUsername"
