--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -70,24 +70,60 @@
             android:orientation="horizontal"
             android:gravity="left">
 
-            <ImageButton
-                android:id="@+id/btnLike"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_heart"
-                android:backgroundTint = "@null"
-                android:scaleType="fitCenter"
-                android:background="@null"
-                android:padding="10dp"/>
+                android:orientation="horizontal"
+                android:gravity="left">
 
-            <ImageButton
-                android:id="@+id/btnChat"
+                <xyz.hanks.library.bang.SmallBangView
+                    android:id="@+id/btnLike"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_heart"
+                    android:backgroundTint = "@null"
+                    android:scaleType="fitCenter"
+                    android:background="@null">
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/heart_selector"
+                        />
+                </xyz.hanks.library.bang.SmallBangView>
+
+                <TextView
+                    android:id="@+id/tvLike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:fontFamily="@font/roboto_light"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="0dp"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_comment"
-                android:backgroundTint = "@null"
-                android:background="@null"
-                android:padding="10dp"/>
+                android:orientation="horizontal"
+                android:gravity="left"
+                android:layout_marginStart="30dp">
+
+                <ImageButton
+                    android:id="@+id/btnComment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_comment"
+                    android:backgroundTint = "@null"
+                    android:background="@null"
+                    android:padding="10dp"/>
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
