--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tvHello"
+            android:id="@+id/commentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20sp"
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvHello2"
+            android:id="@+id/tvHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20sp"
@@ -39,7 +39,7 @@
             android:textSize="18sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvHello" />
+            app:layout_constraintTop_toBottomOf="@+id/commentTitle" />
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
@@ -50,7 +50,7 @@
             android:background="@drawable/search_bar_background"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvHello2" />
+            app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
 
         <LinearLayout
             android:id="@+id/filter"
