--- a/app/src/main/res/layout/layout_forum_comment.xml
+++ b/app/src/main/res/layout/layout_forum_comment.xml
@@ -17,7 +17,7 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/forumMessage"
+            android:id="@+id/commentMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="1dp"
