--- a/app/src/main/res/layout/layout_comment.xml
+++ b/app/src/main/res/layout/layout_comment.xml
@@ -29,32 +29,45 @@
                 android:id="@+id/profileImage1"
                 android:layout_below="@id/img_background"
                 android:layout_centerHorizontal="true"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:src="@drawable/bob"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/white"/>
 
-            <TextView
-                android:id="@+id/tvComment"
-                android:layout_marginStart="5dp"
-                android:text="username"
-                style="@style/commentTextView"
-                android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tvUsername"
+                        android:text="username"
+                        android:textStyle="bold"
+                        style="@style/commentTextView"
+                        android:textSize="19sp" />
+
+                    <TextView
+                        android:id="@+id/tvTime"
+                        android:layout_marginStart="30dp"
+                        android:text="1 week"
+                        style="@style/commentTextView"
+                        android:textSize="16sp"
+                        android:textColor="@color/gray_gainsboro"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/tvComment"
+                    android:text="username"
+                    style="@style/commentTextView"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1 week"
-            android:fontFamily="@font/roboto_light"
-            android:textColor="@color/gray_gainsboro"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:layout_marginStart="40dp"
-            android:layout_marginBottom="2dp"/>
 
     </LinearLayout>
 
