--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,7 +76,7 @@
     </style>
 
     <style name="commentTextView" parent="parent">
-        <item name="fontFamily">@font/roboto_light</item>
+        <item name="fontFamily">@font/bona_nova_regular</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
