--- a/app/src/main/res/layout/forum_comment_fragment.xml
+++ b/app/src/main/res/layout/forum_comment_fragment.xml
@@ -28,6 +28,7 @@
 
         <TextView
             android:id="@+id/tvCreator"
+            android:paddingBottom="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20sp"
@@ -36,7 +37,7 @@
             android:hint = "Creator Username"
             android:textColor="@color/cadmium_blue"
             android:letterSpacing="0.05"
-            android:textSize="18sp"
+            android:textSize="10sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/commentTitle" />
@@ -60,16 +61,30 @@
             android:id="@+id/tvHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20sp"
+            android:layout_marginStart="172dp"
             android:fontFamily="@font/roboto_light"
-            android:textStyle="bold"
+            android:gravity="center"
+            android:letterSpacing="0.05"
             android:text="Replies"
             android:textColor="#C0C0C0"
-            android:letterSpacing="0.05"
             android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingTop="30sp"
+            app:flow_horizontalAlign="center"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvContent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvComment"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_behavior="android.support.v4.widget.NestedScrollView"/>
 
         <EditText
             android:id="@+id/enter_message"
@@ -79,7 +94,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:hint="Enter mesesage..."
-            app:layout_constraintTop_toBottomOf="@id/tvHeader"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/msgBtn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
@@ -99,16 +114,7 @@
             app:layout_constraintTop_toTopOf="@+id/enter_message"
             app:layout_constraintVertical_bias="0.0" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvComment"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/enter_message"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_behavior="android.support.v4.widget.NestedScrollView"/>
+
 
 
 
