--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -127,18 +127,19 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"/>
 
-        <include
-            layout="@layout/custom_tab_layout"
+        <TextView
+            android:id="@+id/linkProfileDetails"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
             android:layout_below="@id/layoutProfile"
-            android:layout_margin="20dp"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/grapenuts"
+            android:text="More about Me!!!"
+            android:textAlignment="center"
+            android:textColor="@color/gray_gainsboro"
+            android:textSize="25sp" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
     </RelativeLayout>
 </FrameLayout>
