--- a/app/src/main/res/layout/forum_comment_fragment.xml
+++ b/app/src/main/res/layout/forum_comment_fragment.xml
@@ -86,6 +86,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_behavior="android.support.v4.widget.NestedScrollView"/>
 
+        <!--
         <EditText
             android:id="@+id/enter_message"
             android:layout_width="0dp"
@@ -113,6 +114,38 @@
             app:layout_constraintStart_toEndOf="@+id/enter_message"
             app:layout_constraintTop_toTopOf="@+id/enter_message"
             app:layout_constraintVertical_bias="0.0" />
+        -->
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/enter_message"
+            style="@style/CommentTextInputLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/ic_right_arrow"
+            app:endIconTint="@color/mikado_yellow"
+            android:textColorHint="@color/black"
+            app:hintTextColor="@color/black"
+            app:boxCornerRadiusBottomEnd="50dp"
+            app:boxCornerRadiusBottomStart="50dp"
+            app:boxCornerRadiusTopEnd="50dp"
+            app:boxCornerRadiusTopStart="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@color/white">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtMsg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textCursorDrawable="@null"
+                android:hint="Comment"
+                android:textColor="@color/black"
+                android:inputType="text"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
 
