--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -131,4 +131,9 @@
         <item name="boxStrokeColor">@color/text_input_box_stroke</item>
         <item name="boxStrokeWidth">1dp</item>
     </style>
+
+    <style name="CommentTextInputLayout2" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">@color/text_input_box_stroke_black</item>
+        <item name="boxStrokeWidth">1dp</item>
+    </style>
 </resources>
